--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,5 @@ dependencies {
     api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0"
     //DataBinding
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
