--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 }
 dependencies {
@@ -72,4 +73,6 @@ dependencies {
     //DataBinding
     kapt "com.android.databinding:compiler:3.2.0-alpha10"
     implementation 'com.squareup.picasso:picasso:2.71828'
+    // Lottie
+    implementation "com.airbnb.android:lottie:3.4.0"
 }
