--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ android {
 }
 dependencies {
     //RetroFit
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation fileTree(dir: "libs", include: ["*.jar"])
