--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
     }
 }
 dependencies {
+    //FloatingMenuActionButtom
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
     //RetroFit
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
